fix: added notnull annotation